<resources>
    <string name="app_name">智能感控</string>
    <string name="app_browser_name">通用浏览器</string>
    <string name="lab_cancel">取消</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="guide_key_sliding_root_navigation">guide_key_sliding_root_navigation</string>

    <string name="menu_organization">功能</string>
    <string name="hint_input">输入机构的名称、所在城市或编码</string>
    <string name="lab_search">查询</string>
    <string name="menu_input">录入</string>
<!--    <string name="menu_profile">我的</string>-->
    <string name="menu_notices">消息</string>

    <string name="joined">已加入</string>
    <string name="into_organization">进入机构</string>
    <string name="join_organization">加入机构</string>
    <string name="check_pending">待审核</string>
    <string name="join">加入</string>


    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_logout">退出</string>

    <string name="about_copyright">© %1$s gs-plant All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_update">版本更新</string>
<!--    <string name="about_item_author_github">关于作者</string>-->
<!--    <string name="about_item_donation_link">捐赠作者</string>-->
<!--    <string name="about_item_add_qq_group">QQ交流群</string>-->
    <string name="url_project">http://m.gz-plant.com/</string>
    <string name="url_author_github">https://github.com/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <string name="update_agree">立即更新</string>
    <string name="update_disagree">不更新</string>
    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="user_name">用户名</string>
    <string name="title_confirm_password">重复密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="hint_please_input_dynamic_code">请输入短信验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="tip_user_name_error">用户名只能是数字、英文、汉字的组合</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="tip_dynamic_code_error">请输入6位数短信验证码</string>
    <string name="regex_verify_code">^\\w{4}$</string>
    <string name="regex_dynamic_code">^\\w{6}$</string>
    <string name="regex_user_name">^[A-z0-9\\u4e00-\\u9fa5]*$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <string name="avatar">头像</string>

    <!-- 分享机构   -->
    <string name="title_share_organization">长按二维码分享或保存</string>

    <!-- 拍照   -->
    <string name="btn_camera">拍照</string>
    <string name="btn_select">从相册选择</string>
    <string name="btn_cancel">取消</string>


    <!-- input   -->
    <string name="title_manually_enter">手动输入查看该设备的医废流转信息</string>
    <string name="number_abc">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="query">查询</string>
    <string name="instructions">说明</string>
    <string name="user_qrcode_ins">欢迎长按或扫码关注</string>
    <string name="hint_search_or">机构名称/城市</string>
    <string name="tv_no_data">无数据</string>
    <string name="txt_message">附加信息：请求加入机构</string>
    <string name="title_type_select">类型选择</string>
    <string name="title_package_select">包装选择</string>
    <string name="title_pollution_select">污染选择</string>
    <string name="refused">拒绝</string>
    <string name="agree">同意</string>
    <string name="tv_tel">Tel:</string>
    <string name="tv_change_avatar">点击头像更改头像</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请重新输入密码</string>
    <string name="tv_other_login">其他登录方式</string>
    <string name="tv_register">注册新用户</string>
    <string name="personal_ware_hourse">个人仓库</string>
    <string name="tv_send_message">发送</string>
    <string name="btn_init_chat">发起聊天</string>
    <string name="get_dynamic_code">获取短信验证码</string>


    <string name="btn_check_weight">进行核重</string>
    <string name="btn_start_check_weight">开始校准</string>
    <string name="btn_transfer_in_personal_warehouse">转移至我的个人仓库</string>
    <string name="btn_upload_weight">上传对比结果</string>



</resources>