<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp">

    <com.xuexiang.xui.widget.imageview.RadiusImageView
        android:id="@+id/iv_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:tint="?attr/colorAccent"
        app:riv_is_circle="true"
        app:srcCompat="@drawable/ic_avatar_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/config_margin_10dp"
        android:text="@string/tv_change_avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/config_margin_24dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_baseline_phone_android_24" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/config_margin_10dp"
            android:hint="@string/tip_please_input_phone_number"
            android:inputType="number"
            app:met_clearButton="true"
            app:met_errorMessage="@string/tip_phone_number_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/title_phone_number"
            app:met_regexp="@string/regex_phone_number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_user_name" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/config_margin_10dp"
            android:hint="@string/hint_user_name"
            app:met_errorMessage="@string/tip_user_name_error"
            app:met_regexp="@string/regex_user_name"
            android:inputType="text"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/user_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_baseline_lock_24" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_password_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/config_margin_10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:met_passWordButton="true"
            app:met_errorMessage="@string/tip_password_error"
            app:met_regexp="@string/regex_password"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/title_password" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_baseline_lock_24" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_password_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/config_margin_10dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            app:met_passWordButton="true"
            app:met_errorMessage="@string/tip_password_error"
            app:met_regexp="@string/regex_password"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/title_confirm_password" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">


        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_dynamic_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:hint="@string/hint_please_input_dynamic_code"
            android:inputType="number"
            app:met_clearButton="false"
            app:met_errorMessage="@string/tip_dynamic_code_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/lab_verify_code"
            app:met_maxCharacters="6"
            app:met_regexp="@string/regex_dynamic_code" />

        <Button
            android:id="@+id/btn_get_dynamic_code"
            android:layout_width="130dp"
            android:layout_height="34dp"
            android:layout_gravity="end|center"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/get_dynamic_code"
            android:background="@color/xui_config_color_blue"
            android:paddingBottom="3dp" />


    </FrameLayout>
        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_register"
            style="@style/SuperButton.Primary.register"
            android:layout_marginTop="16dp"
            android:text="@string/title_register" />
    </LinearLayout>

</LinearLayout>